--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "keywords": [],
   "main": "src/index.tsx",
   "dependencies": {
+    "@types/react-responsive": "8.0.2",
     "@types/styled-components": "5.1.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-responsive": "8.2.0",
     "react-scripts": "4.0.0",
     "styled-components": "5.3.0"
   },
