--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-dom": "17.0.2",
     "react-responsive": "8.2.0",
     "react-scripts": "4.0.0",
-    "styled-components": "5.3.0"
+    "styled-components": "5.3.0",
+    "webpack": "5.38.1"
   },
   "devDependencies": {
     "@types/react": "17.0.0",
